--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="container__texto">
                     <h1></h1>
                     <p class="texto__parrafo"></p>
+                    <p>Hola la la</p>
                 </div>
                 <input type="number" id="valorUsuario" min="1" max="10" class="container__input">
                 <div class="chute container__botones">
